# cmake-behaivor

./: CMakeLists.txt  boo.cpp
cmake/Hunter/: config.cmake
